Bug 1331648 - detect device connection for the case /dev/v4l hasn't existed; r=jesup

MozReview-Commit-ID: 1erqrFScjr